--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,7 +26,7 @@
   </ion-menu>
   <ion-router-outlet id="main-content"></ion-router-outlet>
 
-  <ion-tabs contentId="main-content">
+  <ion-tabs contentId="main-content"><!--add *ngIf="isLoggedIn" later-->
     <ion-tab-bar slot="bottom">
       <ion-tab-button tab="home">
         <ion-icon name="home"></ion-icon>
