--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -1,23 +1,34 @@
-<ion-content>
-  <div class="container">
-    <h2 class="welcome-text">Welcome</h2>
-    <ion-item>
-      <p class="label1">Name</p>
-      <ion-input type="text" [(ngModel)]="name" name="name" class="input1"></ion-input>
-    </ion-item>
-    <ion-item>
-      <p class="label2">Phone</p>
-      <ion-input type="tel" [(ngModel)]="phone" name="phone" class="input2"></ion-input>
-    </ion-item>
-    <ion-item>
-      <p class="label3">Email</p>
-      <ion-input type="email" [(ngModel)]="email" name="email" class="input3"></ion-input>
-    </ion-item>
-    <ion-item>
-      <p class="label4">Password</p>
-      <ion-input type="password" [(ngModel)]="password" name="password" class="input4"></ion-input>
-    </ion-item>
-    <ion-button expand="block" class="register-button" (click)="register()">Register</ion-button>
-    <p class="login-text">Already have an account? <a routerLink="/login">Log in</a></p>
-  </div>
+<ion-header>
+  <ion-toolbar>
+    <ion-title>Sign Up</ion-title>
+  </ion-toolbar>
+</ion-header>
+
+<ion-content class="ion-padding">
+  <div class="center-container">
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title class="welcome-text">Welcome</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      <ion-list>
+        <ion-item>
+          <ion-input type="username" [(ngModel)]="username" name="username" placeholder="Username" class="placeholder"></ion-input>
+        </ion-item>
+        <ion-item>
+          <ion-input type="Phone" [(ngModel)]="phone" name="phone" placeholder="Phone" class="placeholder"></ion-input>
+        </ion-item>
+        <ion-item>
+          <ion-input type="email" [(ngModel)]="email" name="email" placeholder="Email" class="placeholder"></ion-input>
+        </ion-item>
+        <ion-item>
+          <ion-input type="password" [(ngModel)]="password" name="password" placeholder="Password" class="placeholder"></ion-input>
+        </ion-item>
+      </ion-list>
+      <ion-button expand="block" (click)="Register()">Sign Up</ion-button>
+    <p class="ion-text-center ion-margin-top">Already have an account? <a routerLink="/login">Sign In</a></p>
+    <img src="assets/group-1.png" alt="Logo" class="bottom-image">
+    </ion-card-content>
+  </ion-card>
+</div>
 </ion-content>
