--- a/src/app/trips/trips.page.html
+++ b/src/app/trips/trips.page.html
@@ -100,7 +100,7 @@
 
           <ion-row>
             <ion-col>
-              <ion-button id="end-trip-button" expand="block" (click)="endTrip('trips-for-the-day')">End Trip</ion-button>
+              <ion-button id="end-trip-button" expand="block" (click)="endTrip(vehicleTrack)">End Trip</ion-button>
             </ion-col>
           </ion-row>
         </ion-grid>
