--- a/src/app/trip-end/trip-end.page.html
+++ b/src/app/trip-end/trip-end.page.html
@@ -18,42 +18,43 @@
 
   <ion-row>
     <span>Date</span>
-    <ion-input aria-label="date" type="Date" disabled="true" value="2023-02-16"></ion-input>
+    <ion-input aria-label="date" type="Date" [readonly]="true" value="{{ vehicleTrack['date'] }}"></ion-input>
   </ion-row>
 
   <ion-grid>
     <ion-row>
       <ion-col>
         <span>Start Time</span>
-        <ion-input aria-label="start-time" type="Time" disabled="true" value="10:30"></ion-input>
+        <ion-input aria-label="start-time" type="Time" [readonly]="true" value="{{ vehicleTrack['start-time'] }}"></ion-input>
       </ion-col>
       <ion-col>
         <span>End Time</span>
-        <ion-input aria-label="time" type="Time" value="{{ time }}"></ion-input>
+        <ion-input aria-label="time" type="Time" value="{{ time }}" [(ngModel)]="time"></ion-input>
       </ion-col>
     </ion-row>
 
     <ion-row>
       <span>Vehicle Number</span>
-      <ion-input aria-label="vehicle-number" type="text" disabled="true" value="KA00 AA0000"></ion-input>
+      <ion-input aria-label="vehicle-number" type="text" [readonly]="true" value="{{ vehicleTrack['vehicle-number'] }}"></ion-input>
     </ion-row>
 
     <ion-row>
       <span>Driver</span>
-      <ion-input aria-label="driver" type="text" disabled="true" value="Raju A"></ion-input>
+      <ion-input aria-label="driver" type="text" [readonly]="true" value="{{ vehicleTrack['driver-name'] }}"></ion-input>
     </ion-row>
 
     <ion-row>
       <span>Line Employee 1</span>
-      <ion-input aria-label="line-employee-1" type="text" disabled="true" value="Raju B"></ion-input>
+      <ion-input aria-label="line-employee-1" type="text" [readonly]="true" value="{{ vehicleTrack['line-employee-1'] }}"></ion-input>
     </ion-row>
 
     <ion-row>
       <span>Line Employee 2</span>
-      <ion-input aria-label="line-employee-2" type="text" disabled="true" value="Raju C"></ion-input>
+      <ion-input aria-label="line-employee-2" type="text" [readonly]="true" value="{{ vehicleTrack['line-employee-2'] }}"></ion-input>
     </ion-row>
   </ion-grid>
 
-  <ion-button expand="block" (click)="endTrip()">End Trip</ion-button>
+  <ion-button id="submit-button" expand="block" (click)="endTrip()">End Trip</ion-button>
+  <ion-toast id="submit-status" trigger="submit-button" message="Start Trip" [duration]="5000"></ion-toast>
 
 </ion-content>
