--- a/src/app/trip-start/trip-start.page.html
+++ b/src/app/trip-start/trip-start.page.html
@@ -20,35 +20,36 @@
     <ion-row>
       <ion-col>
         <span>Date</span>
-        <ion-input aria-label="date" type="Date" value="{{ date }}"></ion-input>
+        <ion-input aria-label="date" type="Date" value="{{ date }}" [(ngModel)]="date"></ion-input>
       </ion-col>
       <ion-col>
         <span>Start Time</span>
-        <ion-input aria-label="time" type="Time" value="{{ time }}"></ion-input>
+        <ion-input aria-label="time" type="Time" value="{{ time }}" [(ngModel)]="time"></ion-input>
       </ion-col>
     </ion-row>
 
     <ion-row>
       <span>Vehicle Number</span>
-      <ion-input aria-label="vehicle-number" type="text"></ion-input>
+      <ion-input aria-label="vehicle-number" type="text" [(ngModel)]="vehicleNum"></ion-input>
     </ion-row>
 
     <ion-row>
       <span>Driver</span>
-      <ion-input aria-label="driver" type="text"></ion-input>
+      <ion-input aria-label="driver" type="text" [(ngModel)]="driver"></ion-input>
     </ion-row>
 
     <ion-row>
       <span>Line Employee 1</span>
-      <ion-input aria-label="line-employee-1" type="text"></ion-input>
+      <ion-input aria-label="line-employee-1" type="text" [(ngModel)]="lineEmp1"></ion-input>
     </ion-row>
 
     <ion-row>
       <span>Line Employee 2</span>
-      <ion-input aria-label="line-employee-2" type="text"></ion-input>
+      <ion-input aria-label="line-employee-2" type="text" [(ngModel)]="lineEmp2"></ion-input>
     </ion-row>
   </ion-grid>
 
-  <ion-button expand="block" (click)="startTrip()">Start Trip</ion-button>
+  <ion-button id="submit-button" expand="block" (click)="startTrip()">Start Trip</ion-button>
+  <ion-toast id="submit-status" trigger="submit-button" message="Start Trip" [duration]="5000"></ion-toast>
 
 </ion-content>
