start/end trips update

--- a/src/app/trips/trips.page.html
+++ b/src/app/trips/trips.page.html
@@ -30,13 +30,13 @@
         <ion-row class="top-row">
           <ion-col>
             <ion-card-subtitle>Total Trips</ion-card-subtitle>
-            <span>212 Trips</span>
+            <span>{{ totalTrips }} Trips</span>
           </ion-col>
           <ion-col></ion-col>
           <ion-col></ion-col>
           <ion-col>
             <ion-card-subtitle>Trips Today</ion-card-subtitle>
-            <span>4 Trips</span>
+            <span>{{ tripsToday }} Trips</span>
           </ion-col>
         </ion-row>
       </ion-grid>
