--- a/src/app/add-image/add-image.page.html
+++ b/src/app/add-image/add-image.page.html
@@ -16,14 +16,12 @@
     <ion-row justify-content-center>
       <ion-col size="4">
         <ion-button color="medium" expand="block" (click)="takePhoto()">+</ion-button>
-        <div *ngIf="this.picture">
-        <img src="{{this.picture}}"></div>
-
+        <div *ngIf="this.pictures && this.pictures.length > 0">
+          <img *ngFor="let picture of pictures" [src]="picture">
+        </div>
       </ion-col>
       <ion-col size="4">
         <ion-button color="medium" expand="block" (click)="takePhoto()">+</ion-button>
-       
-  
       </ion-col>
       <ion-col size="4">
         <ion-button color="medium" expand="block" (click)="takePhoto()">+</ion-button>
