--- a/src/app/trip-start/trip-start.page.html
+++ b/src/app/trip-start/trip-start.page.html
@@ -20,32 +20,32 @@
     <ion-row>
       <ion-col>
         <span>Date</span>
-        <ion-input aria-label="date" type="Date" value="{{ date }}" [(ngModel)]="date"></ion-input>
+        <ion-input name="date" type="Date" value="{{ date }}" [(ngModel)]="date"></ion-input>
       </ion-col>
       <ion-col>
         <span>Start Time</span>
-        <ion-input aria-label="time" type="Time" value="{{ time }}" [(ngModel)]="time"></ion-input>
+        <ion-input name="time" type="Time" value="{{ time }}" [(ngModel)]="time"></ion-input>
       </ion-col>
     </ion-row>
 
     <ion-row>
       <span>Vehicle Number</span>
-      <ion-input aria-label="vehicle-number" type="text" [(ngModel)]="vehicleNum"></ion-input>
+      <ion-input name="vehicle-number" type="text" [(ngModel)]="vehicleNum"></ion-input>
     </ion-row>
 
     <ion-row>
       <span>Driver</span>
-      <ion-input aria-label="driver" type="text" [(ngModel)]="driver"></ion-input>
+      <ion-input name="driver" type="text" [(ngModel)]="driver"></ion-input>
     </ion-row>
 
     <ion-row>
       <span>Line Employee 1</span>
-      <ion-input aria-label="line-employee-1" type="text" [(ngModel)]="lineEmp1"></ion-input>
+      <ion-input name="line-employee-1" type="text" [(ngModel)]="lineEmp1"></ion-input>
     </ion-row>
 
     <ion-row>
       <span>Line Employee 2</span>
-      <ion-input aria-label="line-employee-2" type="text" [(ngModel)]="lineEmp2"></ion-input>
+      <ion-input name="line-employee-2" type="text" [(ngModel)]="lineEmp2"></ion-input>
     </ion-row>
   </ion-grid>
 
