--- a/src/app/trips/trips.page.html
+++ b/src/app/trips/trips.page.html
@@ -7,10 +7,170 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content class="ion-padding">
   <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">Trips</ion-title>
     </ion-toolbar>
   </ion-header>
+
+  <ion-fab id="add-button" slot="fixed" horizontal="end" vertical="bottom" class="ion-padding">
+    <ion-fab-button (click)="addTrip()">
+      <ion-icon name="add"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
+
+  <ion-card id="overview-card">
+    <ion-card-header>
+      <ion-card-title><b>Overview</b></ion-card-title>
+    </ion-card-header>
+  
+    <ion-card-content>
+      <ion-grid class="ion-no-padding">
+        <ion-row class="top-row">
+          <ion-col>
+            <ion-card-subtitle>Total Trips</ion-card-subtitle>
+            <span>{{ totalTrips }} Trips</span>
+          </ion-col>
+          <ion-col></ion-col>
+          <ion-col></ion-col>
+          <ion-col>
+            <ion-card-subtitle>Trips Today</ion-card-subtitle>
+            <span>{{ tripsToday }} Trips</span>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </ion-card-content>
+  </ion-card>
+ 
+  <p class="side-heading" id="trips-for-the-day-heading">Trips for the Day</p>
+
+  <div id="trips-for-the-day" [hidden]="false">
+    <ion-card id="trips-for-the-day-card" *ngFor="let vehicleTrack of vehicleTrackList">  
+      <ion-card-content>
+        <ion-item class="ion-no-padding">
+          <ion-grid class="ion-no-padding">
+            <ion-row style="padding-bottom: 3%;">
+              <ion-col>
+                <ion-card-subtitle>Date</ion-card-subtitle>
+                <span>{{ vehicleTrack.date }}</span>
+              </ion-col>
+              <ion-col></ion-col>
+              <ion-col>
+                <ion-card-subtitle>Vehicle Number</ion-card-subtitle>
+                <span>{{ vehicleTrack['vehicle-number'] }}</span>
+              </ion-col>
+            </ion-row>
+    
+            <ion-row style="padding-bottom: 3%;">
+              <ion-col>
+                <ion-card-subtitle>Start Time</ion-card-subtitle>
+                <span>{{ vehicleTrack['start-time'] }}</span>
+              </ion-col>
+              <ion-col></ion-col>
+              <ion-col>
+                <ion-card-subtitle>End Time</ion-card-subtitle>
+                <span>{{ vehicleTrack['end-time'] }}</span>
+              </ion-col>
+            </ion-row>
+          </ion-grid>
+        </ion-item>
+
+        <ion-grid class="ion-no-padding">
+          <ion-row style="padding-bottom: 3%; padding-top: 3%;">
+            <ion-col>
+              <ion-card-subtitle>Driver Name</ion-card-subtitle>
+              <span>{{ vehicleTrack['driver-name'] }}</span>
+            </ion-col>
+          </ion-row>
+
+          <ion-row style="padding-bottom: 3%;">
+            <ion-col>
+              <ion-card-subtitle>Line Employee 1</ion-card-subtitle>
+              <span>{{ vehicleTrack['line-employee-1'] }}</span>
+            </ion-col>
+          </ion-row>
+
+          <ion-row style="padding-bottom: 3%;">
+            <ion-col>
+              <ion-card-subtitle>Line Employee 2</ion-card-subtitle>
+              <span>{{ vehicleTrack['line-employee-2'] }}</span>
+            </ion-col>
+          </ion-row>
+
+          <ion-row>
+            <ion-col>
+              <ion-button id="end-trip-button" expand="block" (click)="endTrip(vehicleTrack)">End Trip</ion-button>
+            </ion-col>
+          </ion-row>
+        </ion-grid>
+      </ion-card-content>
+    </ion-card>
+  </div>
+
+  <p class="side-heading" id="past-trips-heading">Past Trips</p>
+  <div id="past-trips" [hidden]="false">
+    <ion-card id="past-trips-card" *ngFor="let trip of tripList">  
+      <ion-card-content>
+        <ion-item [id]="'past-trips-item' + trip.id" class="ion-no-padding" lines="none">
+          <ion-grid class="ion-no-padding">
+            <ion-row style="padding-bottom: 3%;">
+              <ion-col>
+                <ion-card-subtitle>Date</ion-card-subtitle>
+                <span>{{ trip.date }}</span>
+              </ion-col>
+              <ion-col></ion-col>
+              <ion-col>
+                <ion-card-subtitle>Vehicle Number</ion-card-subtitle>
+                <span>{{ trip['vehicle-number'] }}</span>
+              </ion-col>
+            </ion-row>
+    
+            <ion-row style="padding-bottom: 3%;">
+              <ion-col>
+                <ion-card-subtitle>Start Time</ion-card-subtitle>
+                <span>{{ trip['start-time'] }}</span>
+              </ion-col>
+              <ion-col></ion-col>
+              <ion-col>
+                <ion-card-subtitle>End Time</ion-card-subtitle>
+                <span>{{ trip['end-time'] }}</span>
+              </ion-col>
+            </ion-row>
+          </ion-grid>
+        </ion-item>
+
+        <div [id]="'past-trips-expand' + trip.id" class="ion-no-padding" hidden>
+          <ion-grid class="ion-no-padding" style="padding-bottom: 0%;">
+            <ion-row style="padding-bottom: 3%; padding-top: 3%;">
+              <ion-col>
+                <ion-card-subtitle>Driver Name</ion-card-subtitle>
+                <span>{{ trip['driver-name'] }}</span>
+              </ion-col>
+            </ion-row>
+  
+            <ion-row style="padding-bottom: 3%;">
+              <ion-col>
+                <ion-card-subtitle>Line Employee 1</ion-card-subtitle>
+                <span>{{ trip['line-employee-1'] }}</span>
+              </ion-col>
+            </ion-row>
+  
+            <ion-row>
+              <ion-col>
+                <ion-card-subtitle>Line Employee 2</ion-card-subtitle>
+                <span>{{ trip['line-employee-2'] }}</span>
+              </ion-col>
+            </ion-row>
+          </ion-grid>
+        </div>
+        
+        <ion-button class="ion-no-padding" fill="clear" expand="block"
+         (click)="expand('past-trips-item' + trip.id, 'past-trips-expand' + trip.id, 'expand-icon' + trip.id)">
+          <ion-icon [id]="'expand-icon' + trip.id" name="chevron-down-outline"></ion-icon>
+        </ion-button>
+      </ion-card-content>
+    </ion-card>
+  </div>
+
 </ion-content>
