--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,10 +2,15 @@
 
   <ion-menu contentId="main-content" type="overlay">
     <ion-content>
-      <ion-list id="inbox-list">
-        <ion-list-header>Inbox</ion-list-header>
-        <ion-note>hi&#64;ionicframework.com</ion-note>
+      <ion-list>
+        <ion-list-header>Hi, {{ username }}</ion-list-header>
+        <ion-note>{{ email }}</ion-note>
+        <br>
+        <ion-note>Center name: {{ center }}</ion-note>
 
+        <ion-item>
+          <ion-toggle>Kannada</ion-toggle>
+        </ion-item>
         <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages; let i = index">
           <ion-item routerDirection="root" [routerLink]="[p.url]" lines="none" detail="false" routerLinkActive="selected">
             <ion-icon aria-hidden="true" slot="start" [ios]="p.icon + '-outline'" [md]="p.icon + '-sharp'"></ion-icon>
@@ -13,22 +18,13 @@
           </ion-item>
         </ion-menu-toggle>
       </ion-list>
-
-      <ion-list id="labels-list">
-        <ion-list-header>Labels</ion-list-header>
-
-        <ion-item *ngFor="let label of labels" lines="none">
-          <ion-icon aria-hidden="true" slot="start" ios="bookmark-outline" md="bookmark-sharp"></ion-icon>
-          <ion-label>{{ label }}</ion-label>
-        </ion-item>
-      </ion-list>
     </ion-content>
   </ion-menu>
   <ion-router-outlet id="main-content"></ion-router-outlet>
 
-  <ion-tabs contentId="main-content"><!--add *ngIf="isLoggedIn" later-->
+  <ion-tabs contentId="main-content">
     <ion-tab-bar slot="bottom">
-      <ion-tab-button tab="home">
+      <ion-tab-button tab="folder/home">
         <ion-icon name="home"></ion-icon>
         Home
       </ion-tab-button>
