trips-loopback connection update

--- a/src/app/trip-start/trip-start.page.html
+++ b/src/app/trip-start/trip-start.page.html
@@ -35,7 +35,7 @@
 
     <ion-row>
       <span>Driver</span>
-      <ion-input name="driver" type="text" [(ngModel)]="driver"></ion-input>
+      <ion-input name="driver" type="text" [(ngModel)]="driverName"></ion-input>
     </ion-row>
 
     <ion-row>
