--- a/src/app/nonrecycle-add/nonrecycle-add.page.html
+++ b/src/app/nonrecycle-add/nonrecycle-add.page.html
@@ -1,5 +1,5 @@
 
-<!-- <ion-header> 
+ <!-- <ion-header>  
     <ion-toolbar color="orange">
         <ion-title></ion-title>
          <ion-buttons slot="start"> 
@@ -48,5 +48,5 @@
   
   <ion-footer>
     <ion-button color="orange" expand="block" (click)="saveWaste()">Save</ion-button>
-  </ion-footer> -->
-  
+  </ion-footer> 
+-->
