--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
         <ion-note>Center name: {{ center }}</ion-note>
 
         <ion-item>
-          <ion-toggle>Kannada</ion-toggle>
+          <ion-toggle (click)="switchLanguage()">Kannada</ion-toggle>
         </ion-item>
         <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages; let i = index">
           <ion-item routerDirection="root" [routerLink]="[p.url]" lines="none" detail="false" routerLinkActive="selected">
@@ -24,7 +24,7 @@
 
   <ion-tabs contentId="main-content">
     <ion-tab-bar slot="bottom">
-      <ion-tab-button tab="folder/home">
+      <ion-tab-button tab="home">
         <ion-icon name="home"></ion-icon>
         Home
       </ion-tab-button>
