--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,10 +9,10 @@
         <ion-note>Center name: {{ center }}</ion-note>
 
         <ion-item>
-          <ion-toggle>Kannada</ion-toggle>
+          <ion-toggle (click)="switchLanguage()">Kannada</ion-toggle>
         </ion-item>
         <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages; let i = index">
-          <ion-item routerDirection="root" [routerLink]="[p.url]" lines="none" detail="false" routerLinkActive="selected">
+          <ion-item routerDirection="root" [routerLink]="p.url ? [p.url] : ''" (click)="handleNavigation(p.action || '')" lines="none" detail="false" routerLinkActive="selected">
             <ion-icon aria-hidden="true" slot="start" [ios]="p.icon + '-outline'" [md]="p.icon + '-sharp'"></ion-icon>
             <ion-label>{{ p.title }}</ion-label>
           </ion-item>
