--- a/src/app/qrscan/qrscan.page.html
+++ b/src/app/qrscan/qrscan.page.html
@@ -16,9 +16,9 @@
   <div>
     <ion-card class="ion-text-center">
       <ion-card-content >
-        <qrcode 
+        <!-- <qrcode
           [qrdata]="'qrstring'" [width]="256" [errorCorrectionLevel]="'M'">
-        </qrcode>
+        </qrcode> -->
       </ion-card-content>
     </ion-card>
   </div>
