--- a/src/app/items-inside/items-inside.page.html
+++ b/src/app/items-inside/items-inside.page.html
@@ -1,7 +1,10 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      JSON Data Viewer
+      Total Amount: {{ totalAmount }}
+    </ion-title>
+    <ion-title slot="end">
+      <ion-title>Total KG: {{ totalKilograms }}</ion-title>
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -13,20 +16,22 @@
       <ion-select-option value="KRT">KRT</ion-select-option>
       <ion-select-option value="Paper">Paper</ion-select-option>
       <ion-select-option value="White Cover">White Cover</ion-select-option>
+      <ion-select-option value="Brown">Brown</ion-select-option>
+      <ion-select-option value="Waste Bag">Waste Bag</ion-select-option>
+      <ion-select-option value="Oil Cover">Oil Cover</ion-select-option>
+      <ion-select-option value="Waste Glass Plastic">Waste Glass Plastic</ion-select-option>
     </ion-select>
   </ion-item>
 
   <ion-card *ngFor="let record of selectedRecords">
     <ion-card-content>
       <ion-card-subtitle>
-        <strong>Date:</strong> {{record.date}}
+        <strong>Date:</strong> {{ record.date }}
       </ion-card-subtitle>
       <ion-card-subtitle *ngIf="record.name !== ''">
-        <strong>Amount:</strong> {{record.amount}}
+        <strong>Amount:</strong> {{ record.amount }}
       </ion-card-subtitle>
-      <ion-card-subtitle *ngIf="record.name !== ''">
-        <strong>New Center ID:</strong> {{record.newCenterId}}
-      </ion-card-subtitle>
+   
     </ion-card-content>
   </ion-card>
 </ion-content>
