menu update inr

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -104,3 +104,8 @@ ion-note {
 ion-item.selected {
   --color: var(--ion-color-primary);
 }
+
+ion-tab-bar {
+  --color: #82868F;
+  --color-selected: #316974;
+}
