--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <ion-app class="ion-padding">
 
-  <ion-menu contentId="main-content" type="overlay">
+  <ion-menu color="secondary" contentId="main-content" type="overlay">
     <ion-content>
-      <ion-list>
+      <ion-list >
         <ion-list-header>Hi, {{ username }}</ion-list-header>
         <ion-note>{{ email }}</ion-note>
         <br>
@@ -13,7 +13,7 @@
         </ion-item>
         <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages; let i = index">
           <ion-item routerDirection="root" [routerLink]="[p.url]" lines="none" detail="false" routerLinkActive="selected">
-            <ion-icon aria-hidden="true" slot="start" [ios]="p.icon + '-outline'" [md]="p.icon + '-sharp'"></ion-icon>
+            <ion-icon class="menu-icon" aria-hidden="true" slot="start" [ios]="p.icon + '-outline'" [md]="p.icon + '-sharp'"></ion-icon>
             <ion-label>{{ p.title }}</ion-label>
           </ion-item>
         </ion-menu-toggle>
