--- a/src/app/items-inside/items-inside.page.html
+++ b/src/app/items-inside/items-inside.page.html
@@ -1,14 +1,29 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>
-      Total Amount: {{ totalAmount }}
-    </ion-title>
-    <ion-title slot="end">
-      <ion-title>Total KG: {{ totalKilograms }}</ion-title>
-    </ion-title>
+<ion-header>  
+  <ion-toolbar color="orange">
+    <ion-title></ion-title>
+    <ion-buttons slot="start"> 
+      <ion-back-button defaultHref="home"></ion-back-button>
+    </ion-buttons> 
   </ion-toolbar>
 </ion-header>
-
+<ion-content class="ion-padding">
+  <ion-card>
+    <ion-card-header>
+      <ion-card-subtitle>Overview</ion-card-subtitle>
+    </ion-card-header>
+    <ion-card-content>
+      <ion-row>
+        <ion-col size="6">
+          <ion-label>Total Amount: {{ totalAmount }}</ion-label>
+         
+        </ion-col>
+        <ion-col size="6" class="ion-text-right">
+          <ion-label>Total KG: {{ totalKilograms }}</ion-label>
+        
+        </ion-col>
+      </ion-row>
+    </ion-card-content>
+  </ion-card>
 <ion-content>
   <ion-item>
     <ion-label>Select Option:</ion-label>
