home page style update

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -35,10 +35,10 @@
 
   <ion-row class="button-row">
     <ion-col>
-      <ion-tab-button expand="block" class="recyclable-button" (click)="showRecyclableItems()">Recyclable</ion-tab-button>
+      <ion-button expand="block" class="recyclable-button" (click)="showRecyclableItems()">Recyclable</ion-button>
     </ion-col>
     <ion-col>
-      <ion-tab-button expand="block" class="non-recyclable-button" (click)="showNonRecyclableItems()">Non-Recyclable</ion-tab-button>
+      <ion-button expand="block" class="non-recyclable-button" (click)="showNonRecyclableItems()">Non-Recyclable</ion-button>
     </ion-col>
   </ion-row>
 
