--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -36,3 +36,7 @@ ion-content {
     margin: 5px;
     font-size: 14px; /* Adjust the font size of the label */
   }
+
+  ion-button {
+    --background: #A56946;
+  }
