--- a/src/app/qrentry/qrentry.page.html
+++ b/src/app/qrentry/qrentry.page.html
@@ -17,7 +17,7 @@
     </div>
 
     <div class="group3091" style="display: flex;">
-      <ion-button color="#A56946"  class="rectangle35" routerLink="enter-waste" >
+      <ion-button color="#A56946"  class="rectangle35" routerLink="enter-waste"style="text-transform: none;" >
         <ion-label>Enter Waste</ion-label>
       </ion-button>
     </div>
