--- a/src/app/qrscan/qrscan.page.html
+++ b/src/app/qrscan/qrscan.page.html
@@ -1,23 +1,47 @@
 <ion-header [translucent]="true">
-    <ion-toolbar color="#A56946">
-      <ion-button slot="start">
-        <ion-icon style="color:#fff" name="chevron-back-outline"></ion-icon>
+  <ion-toolbar>
+    <ion-buttons slot="start" (click)="navigateBack()">
+      <ion-icon style="color:#fff" name="chevron-back-outline"></ion-icon>
+    </ion-buttons>
+  </ion-toolbar>
+</ion-header>
+
+<ion-content >
+  <ion-header>
+    <ion-toolbar style="background-color: transparent;">
+      <ion-button slot="start" fill="solid" class="switch-camera"(click)="toggleCamera()">
+        <ion-icon name="camera-reverse-sharp" style="color: black"></ion-icon>
+      </ion-button>
+      <ion-button slot="end" fill="solid" class="flash-sharp" (click)="toggleFlashlight()">
+        <ion-icon name="flash-sharp"></ion-icon>
       </ion-button>
     </ion-toolbar>
   </ion-header>
   
-  <ion-content>
-    <ion-list>
-      <ion-item *ngFor="let barcode of barcodes">
-        <ion-label position="stacked">{{ barcode.format }}</ion-label>
-        <ion-input type="text" [value]="barcode.rawValue"></ion-input>
-      </ion-item>
-    </ion-list>
-    <ion-fab slot="fixed" vertical="bottom" horizontal="end">
-      <ion-fab-button (click)="scan()" [disabled]="!isSupported">
-        <ion-icon name="scan"></ion-icon>
-      </ion-fab-button>
-    </ion-fab>
-  </ion-content>
+  <div class="scanarea">
+    <div class="centered-card">
+      <ion-card class="ion-text-center card-size">
+        <ion-card-content>
+          <qrcode
+            [qrdata]="'qrstring'"
+            [width]="250"
+            [errorCorrectionLevel]="'M'"
+            style="opacity: 0;"
+          >
+          </qrcode>
+          <div class="scan-line"></div>
+        </ion-card-content>
+      </ion-card>
+    </div>
+  </div>
+
+
+  <div class="scan-result" *ngIf="scannedResult">
+    <p>Scanned Result: {{ scannedResult }}</p>
+  </div>
+  <div>
+    <p class="scan-instruction">Place a barcode inside the scan area</p>
+  </div>
   
+</ion-content>
   
