home page style update 2

--- a/src/global.scss
+++ b/src/global.scss
@@ -42,4 +42,8 @@ ion-tab-bar {
 body.scanner-active {
     --background: transparent;
     --ion-background-color: transparent;
+}
+
+ion-button {
+    text-transform: capitalize;
   }
