--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -33,14 +33,16 @@
     </ion-card-content>
   </ion-card>
 
-  <ion-row class="button-row">
-    <ion-col>
-      <ion-button expand="block" class="recyclable-button" (click)="showRecyclableItems()">Recyclable</ion-button>
-    </ion-col>
-    <ion-col>
-      <ion-button expand="block" class="non-recyclable-button" (click)="showNonRecyclableItems()">Non-Recyclable</ion-button>
-    </ion-col>
-  </ion-row>
+  <ion-grid class="ion-no-padding">
+    <ion-row class="button-row">
+      <ion-col style="padding-right: 10px;">
+        <ion-button expand="block" class="recyclable-button" (click)="showRecyclableItems()">Recyclable</ion-button>
+      </ion-col>
+      <ion-col style="padding-left: 10px;">
+        <ion-button expand="block" class="non-recyclable-button" (click)="showNonRecyclableItems()">Non-Recyclable</ion-button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 
   <ion-list *ngIf="isRecyclableSelected">
     <ion-item *ngFor="let item of recyclableItems">
@@ -54,12 +56,71 @@
     </ion-item>
   </ion-list>
 
-<ion-tabs>
-  <ion-tab-bar slot="bottom">
-    <ion-button shape="round" expand="block" class="qr-scan-tab" (click)="goToQRScanPage()">
-      <ion-icon name="scan"></ion-icon>
-      <ion-label>Scan QR</ion-label>
-    </ion-button>
-  </ion-tab-bar>
-</ion-tabs>
+  <ion-tabs>
+    <ion-tab-bar slot="bottom">
+      <ion-button shape="round" expand="block" class="qr-scan-tab" (click)="goToQRScanPage()">
+        <ion-icon name="scan"></ion-icon>
+        <ion-label>Scan QR</ion-label>
+      </ion-button>
+    </ion-tab-bar>
+  </ion-tabs>
 </ion-content>
+
+<!--ion-content class="ion-padding">
+  <ion-card>
+    <ion-card-header>
+      <ion-row class="header-row">
+        <ion-col size="6">
+          <ion-card-subtitle>Overview</ion-card-subtitle>
+        </ion-col>
+        <ion-col size="6" class="ion-text-right">
+          <ion-card-subtitle>Center Name: {{ centerName }}</ion-card-subtitle>
+        </ion-col>
+      </ion-row>
+    </ion-card-header>
+    <ion-card-content>
+      <ion-row>
+        <ion-col size="6">
+          <ion-label>Total Waste</ion-label>
+          <p>{{ totalWaste }} kgs</p>
+        </ion-col>
+        <ion-col size="6" class="ion-text-right">
+          <ion-label>Collection of {{ collectionDate }}</ion-label>
+          <p>{{ collectionOfTheDay }} kgs</p>
+        </ion-col>
+      </ion-row>
+    </ion-card-content>
+  </ion-card>
+
+  <ion-grid>
+    <ion-row class="button-row">
+      <ion-col>
+        <ion-tab-button expand="block" class="recyclable-button" (click)="showRecyclableItems()">Recyclable</ion-tab-button>
+      </ion-col>
+      <ion-col>
+        <ion-tab-button expand="block" class="non-recyclable-button" (click)="showNonRecyclableItems()">Non-Recyclable</ion-tab-button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
+  <ion-list *ngIf="isRecyclableSelected">
+    <ion-item *ngFor="let item of recyclableItems">
+      {{ item }}
+    </ion-item>
+  </ion-list>
+
+  <ion-list *ngIf="!isRecyclableSelected">
+    <ion-item *ngFor="let item of nonRecyclableItems">
+      {{ item }}
+    </ion-item>
+  </ion-list>
+
+  <ion-tabs>
+    <ion-tab-bar slot="bottom">
+      <ion-button shape="round" expand="block" class="qr-scan-tab" (click)="goToQRScanPage()">
+        <ion-icon name="scan"></ion-icon>
+        <ion-label>Scan QR</ion-label>
+      </ion-button>
+    </ion-tab-bar>
+  </ion-tabs>
+</ion-content-->
